# restui

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
homebrew/: SETUP.md  restui.rb  update-formula.yml
src/: app.rs  config.rs  filter.rs  main.rs
src/http/: client.rs  mod.rs
src/storage/: collection.rs  environment.rs  history.rs  mod.rs  request.rs  settings.rs
src/ui/: dialog.rs  env_popup.rs  filter_history.rs  help.rs  layout.rs  mod.rs  request_editor.rs  request_list.rs  response.rs  theme_popup.rs  url_bar.rs
src/ui/widgets/: mod.rs
