[package]
name = "restui"
version = "0.1.13"
edition = "2021"
description = "A TUI API testing tool like Postman"
authors = ["Ben Wyrosdick"]
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
graphql-parser = "0.4"

# Syntax highlighting
syntect = "5"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
regex = "1"
base64 = "0.22"

# Logging (optional, useful for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JQ-style filtering
jaq-interpret = "1.5"
jaq-parse = "1.0"
